--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link>
+    <link rel="stylesheet" href="styles/style1.css">
     <title>Share and Care</title>
 </head>
 <body>
+    <div class="upperPanel">
     <section class="title" >
       <p class="title name">Share&Care</p>
-      <br>
       <p class="tilte by">A project by Group - Mighty Maniacs</p>
     </section>
     <nav>
+        <ul>
+            <li><a>Explore</a></li>
+            <li><a>Add Item</a></li>
+            <li><a>About Us</a></li>
     </nav>    
+    </div>
 </body>
 </html>
