Some more styles

--- a/index.html
+++ b/index.html
@@ -5,14 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style1.css">
-    <title>Share and Care</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Montserrat&display=swap" rel="stylesheet">
+
+    <title>SHARE&CARE</title>
 </head>
 <body>
     <div class="upperPanel">
     <section class="title" >
-      <p class="title name">Share&Care</p>
-      <p class="tilte by">A project by Group - Mighty Maniacs</p>
+      <p class="title name" style="font-size: 3rem; font-family: 'Anton', sans-serif;">SHARE&CARE</p><p class="title">A project by Group - Mighty Maniacs</p>
     </section>
+    <br>
+    <br>
+    <br>
+
     <nav>
         <ul>
             <li><a>Explore</a></li>
