--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <nav>
         <ul>
             <li><a>Explore</a></li>
-            <li><a>Add Item</a></li>
-            <li><a>About Us</a></li>
+            <li><a href="google sheet for now">Add Item</a></li>
+            <li><a href="about.html">About Us</a></li>
     </nav>    
     </div>
 </body>
