--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" href="./styles/about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>    
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -24,28 +24,36 @@
 
     </section>
     <aside id="i5">
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->>>>&nbsp;CS200->-SOFTWARE TOOLS & TECHNOLOGIES&nbsp;>>>>--
+            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; ---->>>>&nbsp;CS200-->>--SOFTWARE TOOLS & TECHNOLOGIES&nbsp;>>>>----
     </aside>
     <section id="i4">
             <ul>
                 <li><button id='i6' onclick="myFunction()">MADHUR JAIN</button></li>
-                <li><button id='i7' onclick="myFunction()">KHANDENATH PARTH SHIVDATTA</button></li>
-                <li><button id='i8' onclick="myFunction()">ARJIT BHAMU</button></li>
+                <li><button id='i7' onclick="pk()">KHANDENATH PARTH SHIVDATTA</button></li>
+                <li><button id='i8' onclick="ab()">ARJIT BHAMU</button></li>
             </ul>
     </section>
-
     <!-- footer -->
-    <footer>
+    <!--<footer>
         <ul id="i1">
             <li>INSTRUCTOR: DR. DHIMAN SAHA</li>
             <li>ROLL-NO: MJ-12040830&nbsp;&nbsp;&nbsp;KPS-12040770&nbsp;&nbsp;&nbsp;AB-1204300</li>
         </ul>
-    </footer>
+    </footer>-->
     <script>
         function myFunction() {
-          alert("This page is yet to be constructed !!");
+          alert("Madhur Jain's roll number is 12040820");
         }
-        </script>
+        function pk()
+            {
+                                alert("Khandenath Parth Shivdatta's roll number is 12040770");
+                        }
+            function ab(){
+                                alert("Arjit Bhamu's roll number is 12040300");
+                        }
+    </script>
 </body>
 </html>
+                                                                                                                                                                                          57,7          Bot
+
 
