integrated the input form with google sheet

--- a/Input_page.html
+++ b/Input_page.html
@@ -20,20 +20,20 @@
     <br>
     <hr>
     <div class="container">
-        <form id="contact" action="" method="post">
+        <form id="contact" action="https://script.google.com/macros/s/AKfycbz2z5XV8WeuQU4TUhBWQ0tbhOfeKBTerHlQBlhxRm2zYA_eiEEW7SoMzO1A1uPv2QQy/exec" method="POST">
             <h3>Give the imformation of your extra stuff</h3>
             <h4>IIT Bhilai students</h4>
             <fieldset>
-                <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+                <input name="Name" placeholder="Name" type="text" tabindex="1" required autofocus>
             </fieldset>
             <fieldset>
-                <input placeholder="Room No." type="text" tabindex="2" required>
+                <input name="Room" placeholder="Room" type="number" tabindex="2" required>
             </fieldset>
             <fieldset>
-                <input placeholder="Your Phone Number (optional)" type="tel" tabindex="3" required>
+                <input name="Phone" placeholder="Phone" type="number" tabindex="3" required>
             </fieldset>
             <fieldset>
-                <textarea placeholder="Type your message here or extra stuff" tabindex="5" required></textarea>
+                <input name="Details" placeholder="Details" type="text" tabindex="5" required></input>
             </fieldset>
             <fieldset>
                 <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Submit</button>
