Changes in Index and Input_page html files

--- a/Input_page.html
+++ b/Input_page.html
@@ -12,6 +12,10 @@
         color: #337088;
         font-size: 40px;
     }
+.heading {
+            text-align: center;
+        }
+
 </style>
 
 <body>
