--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <nav>
         <ul>
             <li><a>Explore</a></li>
-            <li><a href="google sheet for now">Add Item</a></li>
+            <li><a href="Input_page.html">Add Item</a></li>
             <li><a href="about.html">About Us</a></li>
     </nav>    
     </div>
