google sheets alternative

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 
     <nav>
         <ul>
-            <li><a>Explore</a></li>
-            <li><a href="google sheet for now">Add Item</a></li>
+            <li><a href="https://docs.google.com/spreadsheets/d/1tG4ZMsh4ZQg-csVRfuRHMwOW47UYsT5GFiTjaWzrzf4/edit?usp=sharing" >View List</a></li>
+            <li><a href="Input_page.html">Add Item</a></li>
             <li><a href="about.html">About Us</a></li>
     </nav>    
     </div>
